首页基本布局

--- a/src/register.html
+++ b/src/register.html
@@ -4,90 +4,7 @@
 <meta charset="utf-8">
 <title>注册</title>
 </head>
-<style>
-    *{
-        padding: 0;
-        margin: 0;
-    }
-    #main {
-        width: 1000px;
-        margin: 0 auto;
-        /* background: lightcyan; */
-    }
-    .logo{
-        margin: 24px 0 99px 0;
-        height: 51px;
-        /* background: lightcoral; */
-    }
-    .logo a {
-        display: inline-block;
-        float: left;
-        text-decoration: none;
-    }
-    .logo img {
-        display: block;
-    }
-    .logo span {
-        display: inline-block;
-        height: 51px;
-        color: #231815;
-        font-size: 20px;
-        line-height: 70px;
-        padding-left: 20px;
-    }
-    #menu{
-        width: 1000px;
-        /* background: lightgreen; */
-    }
-    #menu h3{
-        font-size: 24px;
-        font-weight: bold;
-        color: #222222;
-        text-align: center;
-        line-height: 1;
-        margin-bottom: 68px;
-    }
-    #menu .loginBox{
-        height: 25px;
-        width: 300px;
-        /* background: lightseagreen; */
-        margin: 0 0 0 348px;
-        position: relative;
-    }
-    #menu .loginBox span{
-        font-size: 17px;
-        color: #666666;
-    }
-    #menu .loginBox p{
-        position: absolute;
-        right: 0;
-        top: 0;
-        font-size: 14px;
-        color: #999999;
-    }
-    #menu a{
-        color: #fd8900;
-        text-decoration: none;
-    }
-    #registerBox {
-        margin-left: 250px;
-    }
-    #registerBox label{
-        width: 7em;
-        font-size: 14px;
-        text-align: right;
-        line-height: 46px;
-        color: #333333;
-    }
-    #registerBox input{
-        width: 300px;
-        height: 46px;
-    }
-    .row{
-        padding: 10px 0;
-    }
-
-</style>
+<link rel="stylesheet" href="../src/css/register.css">
 <body>
     <div id="main">
         <!-- logo部分 -->
