--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,17 @@
     <!-- banner -->
     <div id="bannerBox">
         <!-- 二级菜单部分 -->
-        <div class="banner-menu">
-
-        </div>
+        <ul class="banner-menu">
+            <li><i class="gnsjk"></i><a href="#">国内手机卡</a></li>
+            <li><i class="mklh"></i><a href="#">免卡靓号</a></li>
+            <li><i class="gjsjk"></i><a href="#">国际手机卡</a></li>
+            <li><i class="znyj"></i><a href="#">智能硬件</a></li>
+            <li><i class="yxdj"></i><a href="#">游戏道具</a></li>
+            <li><i class="zb"></i><a href="#">周边</a></li>
+            <li><i class="hfcz"></i><a href="#">话费充值</a></li>
+            <li><i class="ywcx"></i><a href="#">业务查询</a></li>
+            <li><i class="ywbl"></i><a href="#">业务办理</a></li>
+        </ul>
         <div class="banner">
             <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0520/8c793902f38bc1c6987072e5380bbc07.jpg" alt="" srcset="">
             <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset="">
@@ -82,8 +90,221 @@
         </div>
     </div>
     <!-- 人气单品部分 -->
-    
-
+    <div id="module-rqdp">
+        <a href="#" class="module-rqdp-product" target="_blank"></a>
+        <a href="#" class="module-rqdp-product" target="_blank"></a>
+        <a href="#" class="module-rqdp-product" target="_blank"></a>
+        <a href="#" class="module-rqdp-product" target="_blank"></a>
+        <div class="module-rqdp-right">
+            <span>
+                人气<br>
+                单品
+            </span>
+            <img src="http://static.snail.com/images/prop/rqdp.png" alt="">
+        </div>
+    </div>
+    <!-- 游戏道具部分 -->
+    <div id="module-yxdj">
+        <!-- 游戏道具标题 -->
+        <div class="module-yxdj-title">
+            <h1>游戏道具</h1>
+        </div>
+        <div class="module-yxdj-selectBar">
+            <div class="module-yxdj-selectBar-wrap">
+            </div>
+        </div>
+        <div class="module-yxdj-products">
+            <a href="#" class="no-border">
+                <img src="http://att1.woniu.com/shopmall.snail.com/2017/1127/e9ce92833932c8a610917874fe239eb59e65dc24.jpeg" alt="">
+            </a>
+            <a href="#" class="module-yxdj-product"></a>
+            <a href="#" class="module-yxdj-product"></a>
+            <a href="#" class="module-yxdj-product"></a>
+            <a href="#" class="module-yxdj-product module-yxdj-productRight"></a>
+            <a href="#" target="_blank" class="more"></a>
+        </div>
+    </div>
+    <!-- 蜗牛手机卡部分 -->
+    <div id="module-SIMcard">
+        <div class="module-SIMcard-title">
+            <h1>蜗牛手机卡
+                <a href="#" class="more">
+                    更多
+                    <span></span>
+                </a>
+            </h1>
+        </div>
+        <div class="module-SIMcard-products">
+            <a href="#" class="no-border">
+                <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0319/d1a7b0cafc379a6bd1f731974b0e7ead.png" alt="">
+            </a>
+            <a href="#" class="module-SIMcard-product"></a>
+            <a href="#" class="module-SIMcard-product"></a>
+            <a href="#" class="module-SIMcard-product"></a>
+            <a href="#" class="module-SIMcard-product module-SIMcard-productRight"></a>
+        </div>
+    </div>
+    <!-- 蜗牛国际手机卡部分 -->
+    <div id="module-INTcard">
+        <div class="module-INTcard-title">
+            <h1>蜗牛国际手机卡
+                <a href="#" class="more">
+                    更多
+                    <span></span>
+                </a>
+            </h1>
+        </div>
+        <div class="module-INTcard-products">
+            <a href="#" class="no-border">
+                <img src="http://att1.woniu.com/mall.snail.com/shop/2018/0607/383c684a08cb987a5b470a4a556e071c.jpg" alt="">
+            </a>
+            <a href="#" class="module-INTcard-product"></a>
+            <a href="#" class="module-INTcard-product"></a>
+            <a href="#" class="module-INTcard-product"></a>
+            <a href="#" class="module-INTcard-product module-INTcard-productRight"></a>
+        </div>
+    </div>
+    <!-- 应用部分 -->
+    <div id="module-use">
+        <div class="module-use-title">
+            <h1>应用</h1>
+        </div>
+        <div class="module-use-products">
+            <div class="module-use-product use-goods"></div>
+            <div class="module-use-product use-game"></div>
+            <div class="module-use-product use-VR"></div>
+            <div class="module-use-productRight use-community"></div>
+        </div>
+    </div>
+    <!-- 底部 -->
+    <div id="footer">
+        <div class="footerMain">
+            <!-- 保证 -->
+            <div class="footer-promise">
+                <p class="footer-p1">
+                    <i></i>100%正品保证
+                </p>
+                <p class="footer-p2">
+                    <i></i>快递包邮
+                </p>
+                <p class="footer-p3">
+                    <i></i>无忧退换货
+                </p>
+                <p class="footer-p4">
+                    <i></i>准时送达
+                </p>
+            </div>
+            <!-- 列表 -->
+            <div class="footer-list">
+                <li class="list">
+                    <h4>关于我们</h4>
+                    <ul class="innerList">
+                        <li><a href="#">蜗牛介绍</a></li>
+                        <li><a href="#">加入蜗牛</a></li>
+                        <li><a href="#">联系我们</a></li>
+                    </ul>
+                </li>
+                <li class="list">
+                    <h4>蜗牛游戏</h4>
+                    <ul class="innerList">
+                        <li><a href="#">手机游戏</a></li>
+                        <li><a href="#">客户端游戏</a></li>
+                        <li><a href="#">网页游戏</a></li>
+                    </ul>
+                </li>
+                <li class="list">
+                    <h4>蜗牛移动</h4>
+                    <ul class="innerList">
+                        <li><a href="#">免卡</a></li>
+                        <li><a href="#">免商店·免卡掌厅</a></li>
+                        <li><a href="#">游戏手机</a></li>
+                        <li><a href="#">游戏主机</a></li>
+                    </ul>
+                </li>
+                <li class="list">
+                    <h4>客服社区</h4>
+                    <ul class="innerList">
+                        <li><a href="#">游戏客服</a></li>
+                        <li><a href="#">游戏社区</a></li>
+                        <li><a href="#">移动客服</a></li>
+                        <li><a href="#">移动社区</a></li>
+                    </ul>
+                </li>
+                <li class="list">
+                    <h4>商务合作</h4>
+                    <ul class="innerList"l>
+                        <li><a href="#">合作信息</a></li>
+                        <li><a href="#">合作伙伴</a></li>
+                    </ul>
+                </li>
+                <li class="list">
+                    <h4>7x24小时客服</h4>
+                    <ul class="innerList">
+                        <li><a href="#">蜗牛移动</a></li>
+                        <li><a href="#">免卡免费服务热线：10040</a></li>
+                        <li><a href="#">免商店咨询：0512-67621007</a></li>
+                        <li><a href="#">蜗牛游戏：0512-67631800</a></li>
+                    </ul>
+                </li>
+            </div>
+            <!-- 奖项 -->
+            <div class="footer-prize">
+                <div class="prize-item prize-item1">
+                    <i></i>
+                    <p>ChinaV中国</p>
+                    <p>产业互联网峰会</p>
+                </div>
+                <div class="prize-item prize-item2">
+                    <i></i>
+                    <p>2014年度</p>
+                    <p>TCT业龙虎榜</p>
+                </div>
+                <div class="prize-item prize-item3">
+                    <i></i>
+                    <p>C114</p>
+                    <p>中国通信网</p>
+                </div>
+                <div class="prize-item prize-item4">
+                    <i></i>
+                    <p>环球时报2014年度</p>
+                    <p>最具渗透力互联网产品</p>
+                </div>
+                <div class="prize-item prize-item5">
+                    <i></i>
+                    <p>2015中国虚拟</p>
+                    <p>运营发展论坛</p>
+                </div>
+                <div class="prize-item prize-item6">
+                    <i></i>
+                    <p>CES展美国知名媒体</p>
+                    <p>Techgage所评</p>
+                </div>
+                <div class="prize-item prize-item7">
+                    <i></i>
+                    <p>人民邮电报</p>
+                    <p>虚商风云榜</p>
+                </div>
+                <div class="prize-item prize-item8">
+                    <i></i>
+                    <p>2014第八届</p>
+                    <p>中国杯帆船赛</p>
+                </div>
+                <div class="prize-item prize-item9">
+                    <i></i>
+                    <p>第三届飞象网中国</p>
+                    <p>好手机、好应用</p>
+                </div>
+            </div>
+        </div>
+        <!-- 版权 -->
+        <div class="footer-copyright">
+                <div class="footer-copyright-main">
+                    <p class="copyright-p1">蜗牛移动，新生代运营商领导者！</p>
+                    <p class="copyright-p2">© 2015 蜗牛 苏州蜗牛数字科技股份有限公司 版权所有 苏ICP备08012323号-6 苏公网安备 32059002001018号</p>
+                    <a href="#" class="copyright-a"></a>
+                </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
 </html>
