五个页面基本布局

--- a/src/list.html
+++ b/src/list.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>蜗牛商城</title>
+<title>列表页</title>
 </head>
-<link rel="stylesheet" href="css/index.css">
-<!-- <link rel="stylesheet" href="css/iconfont.css"> -->
+<link rel="stylesheet" href="css/list.css">
 <body>
     <!-- header头部 -->
     <div id="header">
@@ -23,7 +22,7 @@
                 <a href="#">免登录订单查询</a>
             </div>
             <div class="headerBox-login">
-                <a href="./login.html" class="one">登录</a>
+                <a href="#" class="one">登录</a>
                 <a href="./register.html" target="_Blank" class="two">注册</a>
             </div>
             <!-- header右边部分(我的订单/购物车) -->
@@ -31,7 +30,7 @@
                 <a href="#">我的订单</a>
             </div>
             <div class="cart">
-                <a href="./car.html">
+                <a href="#">
                     <i></i>购物车&nbsp;(&nbsp;
                 <span>0</span>&nbsp;)
                 </a>
@@ -79,114 +78,13 @@
             <li></li>
         </ul>
     </div>
-    <!-- banner -->
-    <div id="bannerBox">
-        <!-- 二级菜单部分 -->
-        <ul class="banner-menu">
-            <li><i class="gnsjk"></i><a href="#">国内手机卡</a></li>
-            <li><i class="mklh"></i><a href="#">免卡靓号</a></li>
-            <li><i class="gjsjk"></i><a href="#">国际手机卡</a></li>
-            <li><i class="znyj"></i><a href="#">智能硬件</a></li>
-            <li><i class="yxdj"></i><a href="#">游戏道具</a></li>
-            <li><i class="zb"></i><a href="#">周边</a></li>
-            <li><i class="hfcz"></i><a href="#">话费充值</a></li>
-            <li><i class="ywcx"></i><a href="#">业务查询</a></li>
-            <li><i class="ywbl"></i><a href="#">业务办理</a></li>
-        </ul>
-        <div class="banner">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0520/8c793902f38bc1c6987072e5380bbc07.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0327/0482eb25e066193868736a8f88f7e21b.png" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2019/1129/4f80c7e985d12792f0dec81bdd0f69ed.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2019/0813/6db977d70531d9ca9d0eab2af5055121.jpg" alt="" srcset="">
-        </div>
+    <!-- 轮播图部分 -->
+    <div id="banner">
+        <img src="http://att1.niucdn.com/shopmall.snail.com/2016/0504/3df26b34dd481c9de68a7027c8e30eb0ee85cae0.jpeg" alt="">
     </div>
-    <!-- 人气单品部分 -->
-    <div id="module-rqdp">
-        <a href="#" class="module-rqdp-product" target="_blank"></a>
-        <a href="#" class="module-rqdp-product" target="_blank"></a>
-        <a href="#" class="module-rqdp-product" target="_blank"></a>
-        <a href="#" class="module-rqdp-product" target="_blank"></a>
-        <div class="module-rqdp-right">
-            <span>
-                人气<br>
-                单品
-            </span>
-            <img src="http://static.snail.com/images/prop/rqdp.png" alt="">
-        </div>
-    </div>
-    <!-- 游戏道具部分 -->
-    <div id="module-yxdj">
-        <!-- 游戏道具标题 -->
-        <div class="module-yxdj-title">
-            <h1>游戏道具</h1>
-        </div>
-        <div class="module-yxdj-selectBar">
-            <div class="module-yxdj-selectBar-wrap">
-            </div>
-        </div>
-        <div class="module-yxdj-products">
-            <a href="#" class="no-border">
-                <img src="http://att1.woniu.com/shopmall.snail.com/2017/1127/e9ce92833932c8a610917874fe239eb59e65dc24.jpeg" alt="">
-            </a>
-            <a href="#" class="module-yxdj-product"></a>
-            <a href="#" class="module-yxdj-product"></a>
-            <a href="#" class="module-yxdj-product"></a>
-            <a href="#" class="module-yxdj-product module-yxdj-productRight"></a>
-            <a href="#" target="_blank" class="more"></a>
-        </div>
-    </div>
-    <!-- 蜗牛手机卡部分 -->
-    <div id="module-SIMcard">
-        <div class="module-SIMcard-title">
-            <h1>蜗牛手机卡
-                <a href="#" class="more">
-                    更多
-                    <span></span>
-                </a>
-            </h1>
-        </div>
-        <div class="module-SIMcard-products">
-            <a href="#" class="no-border">
-                <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0319/d1a7b0cafc379a6bd1f731974b0e7ead.png" alt="">
-            </a>
-            <a href="#" class="module-SIMcard-product"></a>
-            <a href="#" class="module-SIMcard-product"></a>
-            <a href="#" class="module-SIMcard-product"></a>
-            <a href="#" class="module-SIMcard-product module-SIMcard-productRight"></a>
-        </div>
-    </div>
-    <!-- 蜗牛国际手机卡部分 -->
-    <div id="module-INTcard">
-        <div class="module-INTcard-title">
-            <h1>蜗牛国际手机卡
-                <a href="#" class="more">
-                    更多
-                    <span></span>
-                </a>
-            </h1>
-        </div>
-        <div class="module-INTcard-products">
-            <a href="#" class="no-border">
-                <img src="http://att1.woniu.com/mall.snail.com/shop/2018/0607/383c684a08cb987a5b470a4a556e071c.jpg" alt="">
-            </a>
-            <a href="#" class="module-INTcard-product"></a>
-            <a href="#" class="module-INTcard-product"></a>
-            <a href="#" class="module-INTcard-product"></a>
-            <a href="#" class="module-INTcard-product module-INTcard-productRight"></a>
-        </div>
-    </div>
-    <!-- 应用部分 -->
-    <div id="module-use">
-        <div class="module-use-title">
-            <h1>应用</h1>
-        </div>
-        <div class="module-use-products">
-            <div class="module-use-product use-goods"></div>
-            <div class="module-use-product use-game"></div>
-            <div class="module-use-product use-VR"></div>
-            <div class="module-use-productRight use-community"></div>
-        </div>
+    <!-- 详情页渲染区域 -->
+    <div id="cardWrapper">
+
     </div>
     <!-- 底部 -->
     <div id="footer">
@@ -318,6 +216,4 @@
         </div>
     </div>
 </body>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
-<script src="./js/index.js"></script>
 </html>
