六个页面基本布局

--- a/src/index.html
+++ b/src/index.html
@@ -72,33 +72,105 @@
             </ul>
         </div>
         <!-- top-nav隐藏导航区域 -->
-        <ul class="hiddenNav">
+        <!-- <ul class="hiddenNav">
             <li></li>
             <li></li>
             <li></li>
             <li></li>
-        </ul>
+        </ul> -->
     </div>
     <!-- banner -->
     <div id="bannerBox">
         <!-- 二级菜单部分 -->
         <ul class="banner-menu">
-            <li><i class="gnsjk"></i><a href="#">国内手机卡</a></li>
-            <li><i class="mklh"></i><a href="#">免卡靓号</a></li>
-            <li><i class="gjsjk"></i><a href="#">国际手机卡</a></li>
-            <li><i class="znyj"></i><a href="#">智能硬件</a></li>
-            <li><i class="yxdj"></i><a href="#">游戏道具</a></li>
-            <li><i class="zb"></i><a href="#">周边</a></li>
-            <li><i class="hfcz"></i><a href="#">话费充值</a></li>
-            <li><i class="ywcx"></i><a href="#">业务查询</a></li>
-            <li><i class="ywbl"></i><a href="#">业务办理</a></li>
+            <li>
+                <a href="#">
+                    <i class="menulogo gnsjk"></i>
+                    <span>国内手机卡</span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo mklh"></i>
+                    <span>免卡靓号</span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo gjsjk"></i>
+                    <span>国际手机卡</span>  
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo znyj"></i>
+                    <span>智能硬件</span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo yxdj"></i>
+                    <span>游戏道具</span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo zb"></i>
+                    <span>周边</span>  
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo hfcz"></i>
+                    <span>话费充值</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo ywcx"></i>
+                    <span>业务查询</span> 
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="menulogo ywbl"></i>
+                    <span>业务办理</span>  
+                </a>
+            </li>
+            <div class="second-menu">
+                <div class="item">
+                    · · ·<a href="./list.html" style="font-size: 18px; color: #000; text-decoration: underline;">查看全部国际免卡</a>>>>
+                </div>
+                <div class="item">第二块内容</div>
+                <div class="item">第三块内容</div>
+                <div class="item">第四块内容</div>
+                <div class="item">第五块内容</div>
+                <div class="item">第六块内容</div>
+                <div class="item">第七块内容</div>
+                <div class="item">第八块内容</div>
+                <div class="item">第九块内容</div>
+            </div>
         </ul>
         <div class="banner">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0520/8c793902f38bc1c6987072e5380bbc07.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2020/0327/0482eb25e066193868736a8f88f7e21b.png" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2019/1129/4f80c7e985d12792f0dec81bdd0f69ed.jpg" alt="" srcset="">
-            <img src="http://att1.woniu.com/mall.snail.com/shop/2019/0813/6db977d70531d9ca9d0eab2af5055121.jpg" alt="" srcset="">
+            <ul>
+                <!-- 切换的图片 -->
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset=""></li>
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0520/8c793902f38bc1c6987072e5380bbc07.jpg" alt="" srcset=""></li>
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0327/0482eb25e066193868736a8f88f7e21b.png" alt="" srcset=""></li>
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2019/1129/4f80c7e985d12792f0dec81bdd0f69ed.jpg" alt="" srcset=""></li>
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2019/0813/6db977d70531d9ca9d0eab2af5055121.jpg" alt="" srcset=""></li>
+            </ul>
+            <ol>
+                <!-- 切换的小圆圈按钮 -->
+                <li class="olActive"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+            <!-- 左右箭头 -->
+            <a href="javascript:;" class="leftBtn"></a>
+            <a href="javascript:;" class="rightBtn"></a>
         </div>
     </div>
     <!-- 人气单品部分 -->
