首页banner的js和其他页面布局优化

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,9 @@
             <ul class="showNav">
                 <li><a href="#">手机卡</a></li>
                 <li><a href="#">三网卡</a></li>
-                <li><a href="#">道具·周边</a></li>
+                <li class="dropBox">
+                    <a href="#">道具·周边</a>
+                </li>
                 <li><a href="#">网上营业厅</a></li>
                 <li><a href="#">服务</a></li>
                 <li><a href="#">社区</a></li>
@@ -72,12 +74,7 @@
             </ul>
         </div>
         <!-- top-nav隐藏导航区域 -->
-        <!-- <ul class="hiddenNav">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul> -->
+        <div class="hideNav"></div>
     </div>
     <!-- banner -->
     <div id="bannerBox">
@@ -154,8 +151,8 @@
         <div class="banner">
             <ul>
                 <!-- 切换的图片 -->
-                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset=""></li>
                 <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0520/8c793902f38bc1c6987072e5380bbc07.jpg" alt="" srcset=""></li>
+                <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0419/27225cee81eba146e41e2e6a0f78e28e.jpg" alt="" srcset=""></li>
                 <li><img src="http://att1.woniu.com/mall.snail.com/shop/2020/0327/0482eb25e066193868736a8f88f7e21b.png" alt="" srcset=""></li>
                 <li><img src="http://att1.woniu.com/mall.snail.com/shop/2019/1129/4f80c7e985d12792f0dec81bdd0f69ed.jpg" alt="" srcset=""></li>
                 <li><img src="http://att1.woniu.com/mall.snail.com/shop/2019/0813/6db977d70531d9ca9d0eab2af5055121.jpg" alt="" srcset=""></li>
