--- a/src/login.html
+++ b/src/login.html
@@ -32,7 +32,7 @@
         <div class="login-right-help">
             <a href="#">忘记密码</a>
             <span>|</span>
-            <a href="#">注册</a>
+            <a href="./register.html">注册</a>
             <span>|</span>
             <a href="#">帮助</a>
         </div>
