首页渲染和列表页渲染

--- a/src/car.html
+++ b/src/car.html
@@ -69,7 +69,13 @@
             <div class="col6">操作</div>
         </div>
         <div class="carInner">
-            
+            <div>
+                <div class="type">
+                    <input type="checkbox">
+                    <span class="entity icon">实</span>
+                    类型：实物商品
+                </div>
+            </div>
         </div>
     </div>
     <!-- 底部 -->
