--- a/src/index.html
+++ b/src/index.html
@@ -264,10 +264,50 @@
             <h1>应用</h1>
         </div>
         <div class="module-use-products">
-            <div class="module-use-product use-goods"></div>
-            <div class="module-use-product use-game"></div>
-            <div class="module-use-product use-VR"></div>
-            <div class="module-use-productRight use-community"></div>
+            <div class="module-use-product use-goods">
+                <h2>应用</h2>
+                <div class="module-use-product-container">
+                    <h3>免商店</h3>
+                    <h4>蜗牛移动应用中心</h4>
+                    <a href="javascript:;">
+                        <img src="http://att1.niucdn.com/includes/2016/1028/eda45da4b6180e4e4a96af9b22af7507edc15f38.jpeg"/>
+                    </a>
+                    <span class="circle"></span>
+                </div>
+            </div>
+            <div class="module-use-product use-game">
+                <h2>游戏</h2>
+                <div class="module-use-product-container">
+                    <h3>蜗牛游戏</h3>
+                    <h4>天堂2手游</h4>
+                    <a href="javascript:;">
+                        <img src="http://att1.niucdn.com/includes/2016/1028/c8f9ec2a962b8c1c2549ba426ca45932c9de7c08.jpeg"/>
+                    </a>
+                    <span class="circle"></span>
+                </div>
+            </div>
+            <div class="module-use-product use-VR">
+                <h2>VR</h2>
+                <div class="module-use-product-container">
+                    <h3>蜗牛VR</h3>
+                    <h4>虚拟与现实交互</h4>
+                    <a href="javascript:;">
+                        <img src="http://att1.niucdn.com/includes/2016/1028/0e50fb9eb671822fa024302d707341e12e6cb432.jpeg"/>
+                    </a>
+                    <span class="circle"></span>
+                </div>
+            </div>
+            <div class="module-use-productRight use-community">
+                <h2>社区</h2>
+                <div class="module-use-product-container">
+                    <h3>蜗牛移动</h3>
+                    <h4>互动社区</h4>
+                    <a href="javascript:;">
+                        <img src="http://att1.niucdn.com/includes/2016/1028/2af8566842eec90673c51f0c8c817f914c76ece0.jpeg"/>
+                    </a>
+                    <span class="circle"></span>
+                </div>
+            </div>
         </div>
     </div>
     <!-- 底部 -->
