--- a/src/list.html
+++ b/src/list.html
@@ -77,6 +77,8 @@
         <img src="http://att1.niucdn.com/shopmall.snail.com/2016/0504/3df26b34dd481c9de68a7027c8e30eb0ee85cae0.jpeg" alt="">
     </div>
     <!-- 详情页渲染区域 -->
+    <button>默认排序</button>
+    <button>升序排序</button>
     <div id="cardBox">
         <!-- <div class="cardInner">
             <a href="javascript:;">
