--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,7 @@
         <p class="login-left-p3">使用蜗牛盾，安全无忧！<a href="#">详情 ></a></p>
     </div>
     <div class="login-right">
-        <a href="javascript:window.history.back();" class="close"></a>
+        <a href="javascript:window.history.back();" class="close">x</a>
         <p class="login-right-p1">账号登录</p>
         <input type="text" placeholder="蜗牛通行证/免卡号码">
         <input type="password" placeholder="密码">
