--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
             </div>
             <div class="headerBox-login">
                 <a href="./login.html" class="one">登录</a>
-                <a href="./register.html" target="_Blank" class="two">注册</a>
+                <a href="./register.html" class="two">注册</a>
             </div>
             <!-- header右边部分(我的订单/购物车) -->
             <div class="order">
                 <a href="#">我的订单</a>
             </div>
-            <div class="cart">
+            <div class="car">
                 <a href="./car.html">
                     <i></i>购物车&nbsp;(&nbsp;
                 <span>0</span>&nbsp;)
@@ -42,11 +42,26 @@
     <!-- 侧边栏工具条 -->
     <div id="sideBar">
         <!-- 论坛 -->
-        <div class="sideBar-forum"></div>
+        <div class="sideBar-forum">
+            <!-- 论坛方式 -->
+            <div class="sideBar-forum-way" style="display: none;">
+                <a href="javascript:;" class="forum-mobile">
+                    <span class="mobile-icon"></span>
+                    蜗牛移动论坛
+                </a>
+                <a href="javascript:;" class="forum-mobile">
+                    <span class="game-icon"></span>
+                    蜗牛游戏论坛
+                </a>
+            </div>
+        </div>
         <!-- 客服 -->
         <div class="sideBar-service"></div>
         <!-- 分享 -->
-        <div class="sideBar-share"></div>
+        <div class="sideBar-share">
+            <!-- 分享方式 -->
+            <div class="sideBar-share-way" style="display: none;"></div>
+        </div>
         <!-- 意见反馈 -->
         <div class="sideBar-idea"></div>
         <!-- 返回顶部 -->
