--- a/src/login.html
+++ b/src/login.html
@@ -26,8 +26,8 @@
     <div class="login-right">
         <a href="javascript:window.history.back();" class="close">x</a>
         <p class="login-right-p1">账号登录</p>
-        <input type="text" placeholder="蜗牛通行证/免卡号码">
-        <input type="password" placeholder="密码">
+        <input type="text" placeholder="蜗牛通行证/免卡号码" class="username">
+        <input type="password" placeholder="密码" class="password">
         <a href="#" class="loginBtn">登 录</a>
         <div class="login-right-help">
             <a href="#">忘记密码</a>
@@ -39,4 +39,7 @@
     </div>
 </div>
 </body>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.12.4/jquery.js"></script>
+<script src="./js/login.js"></script>
+<script src="./js/sha1.js"></script>
 </html>
